end of read data from web

--- a/read_data_from_web.Rmd
+++ b/read_data_from_web.Rmd
@@ -2,10 +2,10 @@
 title: "read_data_from_web"
 author: "Ze Li"
 date: "2023-10-12"
-output: html_document
+output: github_document
 ---
 
-```{r, include = FALSE message = FALSE, warning=FALSE}
+```{r, include = FALSE, message = FALSE, warning=FALSE}
 library(tidyverse)
 library(ggridges)
 
@@ -86,3 +86,31 @@ swm_df =
   )
 ```
 
+
+## APIs
+
+Get water data from NYC.
+
+```{r}
+nyc_water_df = 
+  GET("https://data.cityofnewyork.us/resource/ia2d-e54m.csv") |> 
+  content()
+```
+
+BRFSS Data
+
+```{r}
+brfss_df = 
+  GET(
+    "https://data.cdc.gov/resource/acme-vg9e.csv",
+    query = list("$limit" = 5000)) |> 
+  content() #content("parsed")
+```
+
+Try it now!
+
+```{r}
+poke_df = 
+  GET("https://pokeapi.co/api/v2/pokemon/ditto") |> 
+  content()
+```
