end of strings and factors

--- a/strings_and_factors.Rmd
+++ b/strings_and_factors.Rmd
@@ -9,6 +9,8 @@ output: github_document
 ```{r, include = FALSE, message = FALSE, warning=FALSE}
 library(tidyverse)
 library(ggridges)
+library(rvest)
+library(p8105.datasets)
 
 knitr::opts_chunk$set(
   echo = TRUE,
@@ -119,4 +121,111 @@ vec_sex
 as.numeric(vec_sex)
 ```
 
+
+
 ## NSDUH
+
+```{r}
+nsduh_url = "http://samhda.s3-us-gov-west-1.amazonaws.com/s3fs-public/field-uploads/2k15StateFiles/NSDUHsaeShortTermCHG2015.htm"
+
+table_marj = 
+  read_html(nsduh_url) |> 
+  html_table() |> 
+  first() |> 
+  slice(-1)
+```
+
+need to tidy this!
+
+```{r}
+marj_df =
+  table_marj |> 
+  select(-contains("P Value")) |> 
+  pivot_longer(
+    -State,
+    names_to = "age_year",
+    values_to = "percent"
+  ) |> 
+  separate(age_year, into = c("age", "year"), "\\(") |> 
+  mutate(
+    year = str_replace(year, "\\)", ""),
+    percent = str_replace(percent, "[a-b]", ""),
+    percent = as.numeric(percent)) |> 
+  filter(!(State %in% c("Total U.S.", "Northeast", "Midwest", "South", "West")))
+```
+
+```{r}
+marj_df |> 
+  filter(age == "18-25") |> 
+  mutate(State = fct_reorder(State, percent)) |> 
+  ggplot(aes(x = State, y = percent, color = year)) +
+  geom_point() + 
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+```
+
+
+
+## NYC Restaurant Inspections
+
+```{r}
+data("rest_inspec")
+
+rest_inspec
+```
+
+```{r}
+rest_inspec |> 
+  count(boro, grade) |> 
+  pivot_wider(
+    names_from = grade,
+    values_from = n
+  ) |> 
+  knitr::kable()
+```
+
+```{r}
+inspection_df = 
+  rest_inspec |> 
+  filter(grade %in% c("A", "B", "C"), boro != "Missing") |> 
+  mutate(
+    boro = str_to_title(boro),
+    dba = str_to_upper(dba))
+```
+
+Pizza places
+
+```{r}
+inspection_df |> 
+  filter(str_detect(dba, "PIZZA")) |> 
+  count(boro)
+```
+
+```{r}
+inspection_df |> 
+  filter(str_detect(dba, "PIZZA")) |> 
+  mutate(boro = fct_infreq(boro)) |> 
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar()
+```
+
+
+
+```{r}
+inspection_df |> 
+  filter(str_detect(dba, "PIZZA")) |> 
+  mutate(
+    boro = fct_infreq(boro), 
+    boro = str_replace(boro, "Manhattan", "The City")) |> 
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar()
+```
+
+```{r}
+inspection_df |> 
+  filter(str_detect(dba, "PIZZA")) |> 
+  mutate(
+    boro = fct_infreq(boro), 
+    boro = fct_recode(boro, "The City" = "Manhattan")) |> 
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar()
+```
